# SSH-VPN

./: .gitignore  AGENT.md  CONTRIBUTING.md  LICENSE  PASS.md  README.md  README.zh.md  Readme.fa.md  code_review_request.txt  ssh-vpn.sln
.agents_tmp/: PLAN.md
.github/workflows/: dotnet-desktop.yml  main.yml  release.yml
ssh-vpn/: BandwidthMonitor.cs  Form1.Designer.cs  Form1.cs  LanguageManager.cs  Program.cs  ServerEditForm.Designer.cs  ServerEditForm.cs  ServerEditForm.resx  ServerListForm.Designer.cs  ServerListForm.cs  ServerListForm.resx  ServerManager.cs  SettingsForm.Designer.cs  SettingsForm.cs  ThemeManager.cs  ssh-vpn.csproj
ssh-vpn-tauri/: SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js
ssh-vpn-tauri/src/: App.tsx  main.tsx
ssh-vpn-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ssh-vpn-tauri/src-tauri/src/: app.manifest  bandwidth.rs  commands.rs  debug.rs  error.rs  lib.rs  main.rs  routing.rs  ssh_client.rs  storage.rs  vpn.rs
ssh-vpn-tauri/src/components/Dashboard/: BandwidthChart.tsx  ConnectionCard.tsx  Dashboard.tsx  DebugLogs.tsx  StatsPanel.tsx
ssh-vpn-tauri/src/components/Layout/: Header.tsx  Sidebar.tsx  StatusBar.tsx
ssh-vpn-tauri/src/components/ServerList/: ServerCard.tsx  ServerEditModal.tsx  ServerList.tsx
ssh-vpn-tauri/src/components/Settings/: Settings.tsx
ssh-vpn-tauri/src/components/UI/: Button.tsx  Card.tsx  Modal.tsx  Toggle.tsx
ssh-vpn-tauri/src/i18n/: en.json  fa.json  index.ts
ssh-vpn-tauri/src/store/: appStore.ts
ssh-vpn-tauri/src/styles/: index.css
ssh-vpn-tauri/src/types/: index.ts
ssh-vpn.Setup/: Product.wxs  setup.iss  ssh-vpn.Setup.wixproj
ssh-vpn/Properties/: Resources.Designer.cs  Resources.resx
